--- a/hacker/index.html
+++ b/hacker/index.html
@@ -2,7 +2,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>40 Shades Of Gray</title>
+    <title>Counting game</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -57,6 +57,7 @@
             <td data-cell-index="24" class="cell"></td>
             <td data-cell-index="25" class="cell"></td>
         </tr>
+    <h3>Made with ❤ by Aniket </h3>  
     </table>
     <script src="script.js"></script>
 </body>
