--- a/hackerpp/index.html
+++ b/hackerpp/index.html
@@ -2,7 +2,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>40 Shades of Grey</title>
+    <title>Counting game</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -97,6 +97,7 @@
             <td data-cell-index="24" class="cell"></td>
             <td data-cell-index="25" class="cell"></td>
         </tr>
+     <h3>Made with ❤ by Aniket </h3> 
     </table>
     </div>
     <script src="script.js"></script>
